--- a/ClientGeoUser/app/src/main/res/values/strings.xml
+++ b/ClientGeoUser/app/src/main/res/values/strings.xml
@@ -1,14 +1,7 @@
 <resources>
     <string name="app_name">GeoUser</string>
     <string name="action_settings">Settings</string>
-    <string name="registrati">Sign in</string>
-    <string name="accedi">Login</string>
-    <string name="username">Please insert your Username</string>
-    <string name="password">Please insert password</string>
-    <string name="RePassword">Please reinsert password</string>
-    <string name="email">Please insert your e-mail address</string>
-    <string name="nome">Please insert your Name</string>
-    <string name="cognome">Please insert your Surname</string>
+
     <string name="buttonTog">Send</string>
     <string name="title_activity_login">Sign in</string>
     <string name="utenteC">Insert the Username to find</string>
@@ -22,9 +15,10 @@
     -->
 
 
-    <!-- Strings related to login -->
+    <!-- Strings related to login and signin-->
     <string name="prompt_username">Username</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password </string>
+    <string name="prompt_password2">Reinsert Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_log_in">Log in</string>
@@ -36,5 +30,11 @@
         completions."
     </string>
     <string name="title_activity_maps">Map</string>
+    <string name="registrati">Sign in</string>
+    <string name="accedi">Login</string>
+    <string name="email">Please insert your e-mail address</string>
+    <string name="nome">Please insert your Name</string>
+    <string name="cognome">Please insert your Surname</string>
+    <string name="init_message">Please select an Operation</string>
 
 </resources>
