Sostituzione delle informazioni visualizzate relative la posizione corrente con una MapView contenente la posizione corrente, correzione dei file di layout xml.

--- a/ClientGeoUser/app/src/main/res/values/strings.xml
+++ b/ClientGeoUser/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="trova_utente">Find User</string>
     <string name="update_gps">Update GPS</string>
     <string name="find">Find</string>
+    <string name="find_time">Change time</string>
+    <string name="find_date">Change date</string>
 
 
     -->
