--- a/ClientGeoUser/app/src/main/res/values/strings.xml
+++ b/ClientGeoUser/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="trova_utente">Find User</string>
     <string name="update_gps">Update GPS</string>
     <string name="find">Find</string>
+    <string name="allUserPosition">Find All</string>
     <string name="find_time">Change time</string>
     <string name="find_date">Change date</string>
     <string name="prompt_ip">Insert IP</string>
