--- a/ClientGeoUser/app/src/main/res/values/strings.xml
+++ b/ClientGeoUser/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="buttonTog">Send</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Sign up</string>
     <string name="utenteC">Insert the Username to find</string>
     <string name="data1">Insert the first date in format MM/dd/yyyy HH:mm:ss</string>
     <string name="data2">Insert the second date in format MM/dd/yyyy HH:mm:ss</string>
@@ -25,7 +25,7 @@
     <string name="prompt_password">Password </string>
     <string name="prompt_password2">Reinsert Password</string>
     <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in_short">Sign up</string>
     <string name="action_log_in">Log in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -35,7 +35,7 @@
         completions."
     </string>
     <string name="title_activity_maps">Map</string>
-    <string name="registrati">Sign in</string>
+    <string name="registrati">Sign up</string>
     <string name="accedi">Login</string>
     <string name="email">Please insert your e-mail address</string>
     <string name="nome">Please insert your Name</string>
